feat: Fix UserWishCoupon sort